# plugins-glm

./: .gitignore  M2Demo.py  api_test.py  arguments.py  batch_run.py  exceed_check.py  main.py  readme.md  run.sh  utils.py
chatglm6b_v10/: config.json  modeling_chatglm.py  tokenization_chatglm.py
ds_config/: stage2.json
plugin-service/: .gitignore  pyproject.toml
plugin-service/configs/: logging.yaml
plugin-service/plugin_service/: __init__.py  logging.py  main.py
plugin-service/plugin_service/llm/: __init__.py  prompts.py  utils.py
plugin-service/plugin_service/plugins/: __init__.py  tool.py
plugin-service/scripts/: M2Demo.py  single_round_test.py  start_service.sh
